<resources>
    <string name="app_name" translatable="false">TP1_HERON</string>
    <string name="action_settings">Paramètres</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Connexion client</string>
    <string name="second_fragment_label">Connexion serveur</string>
    <string name="next">Serveur</string>
    <string name="previous">Client</string>

    <string name="hello_first_fragment">Cette partie permet au client de se connecter à un serveur.</string>
    <string name="hello_second_fragment">Cette partie permet de demarrer le serveur.</string>
    <string name="app_message">Veuillez compléter le champs Pseudo et établir une connexion</string>
    <string name="dialog_message">whut</string>
    <string name="hint">Entrer votre pseudo</string>
    <string name="text_button_client_connect">Se connecter</string>
    <string name="IP_Server">IP du serveur</string>
    <string name="IP_du_serveur"></string>
</resources>

